feat: add pgsql support + separate script from action
Script was separated from action by creating a script.sh, which allows
to "run" the action in a local dev environment.
PostgreSQL support was added by using binaries provided as psql
Some vars were added (e.g. DBMS) in order to trigger specific part of
script.
Some checks about missing envvars were added too.
Some improvements about syntax / refactoring were made too to ease
maintenance and try to not create a bash hell

--- a/action.yaml
+++ b/action.yaml
@@ -1,4 +1,7 @@
 inputs:
+  DBMS:
+    required: true
+    default: "mysql"
   CLUSTER:
     required: true
   SECRETS_JSON:
@@ -9,17 +12,18 @@ inputs:
     description: "create, delete, import or export"
   PREFIX_NAME:
     required: true
-  NAMESPACE:
-    required: true
   DB_USER:
     required: true
   DB_NAME:
     required: true
+  DUMP_FILENAME:
+    required: true
+    # without sql.gz extension
+    default: "latest"
   DUMP_SUBSTITUTIONS:
-    required: false
+    required: true
     default: "[]"
     description: "json array of search/replacement to apply before inserting dump (or inverted during dump). This must not contains # (used as sed delimiter)"
-
 
 runs:
   using: "composite"
@@ -34,163 +38,20 @@ runs:
     #  run: |
     #    env | sort
     - shell: bash
-      id: install_sql_proxy
+      # a checkout action of `coopTilleuls/action-database` must be set with `path: 'action-database'`
       run: |
         set -e
+        cd action-database
         test -f cloud_sql_proxy || wget -nv https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O cloud_sql_proxy
         test -x cloud_sql_proxy || chmod +x cloud_sql_proxy
-
-    - shell: bash
-      id: setup_sql_proxy_auth
-      run: |
-        set -e
-
-        if [ ! -f ~/.kube/config ]; then
-          echo "action kubernetes_set_env must be run before"
-          echo "this is needed to read/write db password in Kubernetes secret"
-          exit 1
-        fi
-
-        function get_input() {
-          local key=$1
-          jq -r ".$key // empty" <<EOF
-          ${{ inputs.SECRETS_JSON }}
-        EOF
-        }
-
-        CLUSTER=${{ inputs.CLUSTER }}
-        CLUSTER_UC=$(echo ${{ inputs.CLUSTER }} | tr a-z A-Z)
-        SQL_INSTANCE="$(get_input SQL_INSTANCE_${CLUSTER_UC})"
-        SQL_PROXY_AUTH_BASE64="$(get_input SQL_PROXY_AUTH_BASE64_${CLUSTER_UC})"
-        SQL_ADMIN_USER="$(get_input SQL_ADMIN_USER_${CLUSTER_UC})"
-        SQL_ADMIN_PASSWORD="$(get_input SQL_ADMIN_PASSWORD_${CLUSTER_UC})"
-
-        if [ -z "$SQL_PROXY_AUTH_BASE64" ]; then
-          echo "SQL_PROXY_AUTH_BASE64_${CLUSTER_UC} secret is missing"
-          exit=1
-        fi
-        if [ -z "$SQL_INSTANCE" ]; then
-          echo "SQL_INSTANCE_${CLUSTER_UC} secret is missing"
-          exit=1
-        fi
-        if [ -z "$SQL_ADMIN_USER" ]; then
-          echo "SQL_ADMIN_USER_${CLUSTER_UC} secret is missing"
-          exit=1
-        fi
-        if [ -z "$SQL_ADMIN_PASSWORD" ]; then
-          echo "SQL_ADMIN_PASSWORD_${CLUSTER_UC} secret is missing"
-          exit=1
-        fi
-        if [ -n "$exit" ]; then
-          exit 1
-        fi
-
-        AUTH_FILE=/tmp/gce-cloudsql-proxy-key.json
-
-        # create sql auth config
-        base64 -d <<EOF > $AUTH_FILE
-        $SQL_PROXY_AUTH_BASE64
-        EOF
-
-        # launch proxy
-        ./cloud_sql_proxy \
-          -instances=$SQL_INSTANCE=tcp:0.0.0.0:3306 \
-          -credential_file $AUTH_FILE \
-          &
-
-        MYSQL_OPTIONS="-h 127.0.0.1 -P 3306 --connect-timeout=1 -u $SQL_ADMIN_USER -p$SQL_ADMIN_PASSWORD"
-        MYSQLDUMP_OPTIONS="-h 127.0.0.1 -P 3306 -u $SQL_ADMIN_USER -p$SQL_ADMIN_PASSWORD"
-        DB_NAME=${{ inputs.DB_NAME }}
-        DB_USER=${{ inputs.DB_USER }}
-
-        # test db connection via proxy
-        for i in $(seq 1 10); do
-          mysql $MYSQL_OPTIONS -e "select 1;" && break;
-          if [ $i -eq 10 ]; then
-            echo no connection to mysql after $i retry
-            exit 1
-          fi
-          sleep 1
-        done
-
-        # debug
-        set -x
-
-        # this function replace all search/replace from the DUMP_SUBSTITUTIONS input
-        # this can be reverted for db exports
-        function dump_substitute() {
-          FILE=$1
-          REVERT=$2
-          for i in $(seq 0 $(expr $(jq ". | length" substitutions.json) - 1 )); do
-            if [ -z "$REVERT" ]; then
-              sed -i -e 's#'$(jq -r ".[$i].search" substitutions.json)'#'$(jq -r ".[$i].replace" substitutions.json)'#g' $FILE
-            else
-              sed -i -e 's#'$(jq -r ".[$i].replace" substitutions.json)'#'$(jq -r ".[$i].search" substitutions.json)'#g' $FILE
-            fi
-          done
-        }
-
-        cat > substitutions.json <<EOF
-          ${{ inputs.DUMP_SUBSTITUTIONS }}
-        EOF
-
-        if [ "${{ inputs.ACTION }}" == "create" ]; then
-          
-          # get or set db password in Kubernetes Secret
-          # if secret exist, read password, else create it
-          if kubectl get secret ${{ inputs.PREFIX_NAME }}-mysql; then
-            MYSQL_PASSWORD=$(kubectl get secret ${{ inputs.PREFIX_NAME }}-mysql -o=jsonpath='{.data.mysql-password}' | base64 -d)
-          else
-            MYSQL_PASSWORD=$(openssl rand -base64 48 | tr -dc A-Za-z0-9 | head -c14)
-            kubectl create secret generic ${{ inputs.PREFIX_NAME }}-mysql \
-              --from-literal=mysql-password=$MYSQL_PASSWORD
-          fi
-          
-          # create database if not exists
-          mysql $MYSQL_OPTIONS -e "create database if not exists \`$DB_NAME\`;"
-
-          # create user if not exists
-          mysql $MYSQL_OPTIONS -e "create user if not exists '$DB_USER'@'%' identified by '$MYSQL_PASSWORD';"
-
-          # grant privileges
-          mysql $MYSQL_OPTIONS -e "grant all privileges on \`$DB_NAME\`.* TO '$DB_USER'@'%';"
-        fi
-
-        if [ "${{ inputs.ACTION }}" == "import" ]; then
-
-          # import database
-          if [ ! -f "latest.sql.gz" ]; then
-            echo "Nothing to import"
-          else
-            echo "some tables are excluded for ci/cd performance"
-            gunzip latest.sql.gz
-            # call DUMP_SUBSTITUTIONS replacement function
-            dump_substitute latest.sql
-            cat latest.sql | mysql $MYSQL_OPTIONS $DB_NAME
-          fi
-
-        fi
-
-        if [ "${{ inputs.ACTION }}" == "export" ] ;then
-          DATEDJ=$(date +%F)
-          SITE_BACK_URL="https://${{ inputs.SITE_BACK_DOMAIN }}"
-          mysqldump $MYSQLDUMP_OPTIONS --opt $DB_NAME --set-gtid-purged=OFF --single-transaction > ${DATEDJ}-dump.sql
-          # call DUMP_SUBSTITUTIONS replacement function, revert mode during export
-          dump_substitute ${DATEDJ}-dump.sql revert
-          gzip ${DATEDJ}-dump.sql
-
-        fi
-
-        if [ "${{ inputs.ACTION }}" == "delete" ]; then
-          if [ "${{ inputs.PREFIX_NAME }}" == "main" -o "${{ inputs.PREFIX_NAME }}" == "prod" ]; then
-            echo "We never delete production"
-            exit 1
-          else
-            mysql $MYSQL_OPTIONS -e "drop database if exists \`$DB_NAME\`;"
-            mysql $MYSQL_OPTIONS -e "drop user if exists '$DB_USER'@'%';"
-            kubectl delete secret ${{ inputs.PREFIX_NAME }}-mysql
-          fi
-        fi
-
-        # stop sql proxy
-        kill %1
+        bash script.sh
+      env:
+        SECRETS_JSON: ${{ inputs.SECRETS_JSON }}
+        DBMS: ${{ inputs.DBMS }}
+        ACTION: ${{ inputs.ACTION }}
+        CLUSTER: ${{ inputs.CLUSTER }}
+        PREFIX_NAME: ${{ inputs.PREFIX_NAME }}
+        DB_USER: ${{ inputs.DB_USER }}
+        DB_NAME: ${{ inputs.DB_NAME }}
+        DUMP_FILENAME: ${{ inputs.DUMP_FILENAME }}
+        DUMP_SUBSTITUTIONS: ${{ inputs.DUMP_SUBSTITUTIONS }}
